--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cjs": "^0.0.11",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.1"
   },
   "scripts": {
