--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cjs": "^0.0.11",
     "connect-mongo": "^5.1.0",
