--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "noty": "^3.2.0-beta-deprecated"
   },
   "scripts": {
     "dev": "nodemon server.js",
