--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cjs": "^0.0.11",
     "connect-mongo": "^5.1.0",
@@ -12,7 +13,9 @@
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
-    "noty": "^3.2.0-beta-deprecated"
+    "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "dev": "nodemon server.js",
