--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "noty": "^3.2.0-beta-deprecated",
