--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "watch": "mix --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.49",
     "nodemon": "^3.1.0",
+    "postcss": "^8.4.38",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.74.1",
-    "sass-loader": "^12.1.0"
+    "sass-loader": "^12.1.0",
+    "tailwindcss": "^3.4.3"
   }
 }
